# peabody

./: .gitignore  Makefile.am  configure.ac
src/client/: client.html  client.js  compositor.js  shm.js  wayland.js  wl.js
src/server/: main.c  peabody-server.c  peabody-server.h
src/tools/: scanner.py
src/websocket/: websocketserver.c  websocketserver.h
